--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -22,7 +22,7 @@ jobs:
         submodules: true
         fetch-depth: 0
 
-    - uses: pypa/cibuildwheel@38dab4b641824b4d652209380802ae125b645d5b
+    - uses: pypa/cibuildwheel@v3.0.0rc1
       env:
         PYODIDE_BUILD_EXPORTS: whole_archive
       with:
@@ -40,7 +40,7 @@ jobs:
 
     - run: brew upgrade cmake
 
-    - uses: pypa/cibuildwheel@38dab4b641824b4d652209380802ae125b645d5b
+    - uses: pypa/cibuildwheel@v3.0.0rc1
       env:
         CIBW_PLATFORM: ios
       with:
