ci: add wheel (missing)
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -63,6 +63,8 @@ jobs:
         submodules: true
         fetch-depth: 0
 
+    - run: pipx install wheel
+
     - uses: mhsmith/cibuildwheel@android
       env:
         CIBW_PLATFORM: android
