--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -63,12 +63,23 @@ jobs:
         submodules: true
         fetch-depth: 0
 
+    # GitHub Actions can't currently run the Android emulator on macOS.
+    - name: Skip Android tests on macOS
+      if: contains(matrix.runs-on, 'macos')
+      run: echo "CIBW_TEST_COMMAND=" >> "$GITHUB_ENV"
+
+    # https://github.blog/changelog/2024-04-02-github-actions-hardware-accelerated-android-virtualization-now-available/
+    - name: Enable KVM for Android emulator
+      if: contains(matrix.runs-on, 'ubuntu')
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
+
     - run: pipx install wheel patchelf
 
-    - uses: mhsmith/cibuildwheel@android
+    - uses: mhsmith/cibuildwheel@android  # TODO: update to a released version
       env:
         CIBW_PLATFORM: android
-        # Needed to include C++ in the wheel
-        CIBW_ENVIRONMENT_ANDROID: ANDROID_API_LEVEL="24"
       with:
         package-dir: tests
