--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -76,7 +76,9 @@ jobs:
         sudo udevadm control --reload-rules
         sudo udevadm trigger --name-match=kvm
 
-    - run: pipx install patchelf
+    # TODO: remove "wheel" once we're using a cibuildwheel version that includes
+    # https://github.com/pypa/cibuildwheel/pull/2515.
+    - run: pipx install wheel patchelf
 
     - uses: pypa/cibuildwheel@v3.1
       env:
