--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -11,7 +11,7 @@ name = "pybind11_tests"
 version = "0.0.1"
 dependencies = [
   "pytest",
-  "pytest-timeout"
+  "pytest-timeout",
   "numpy; sys_platform != 'android' and (sys_platform != 'ios' or python_version < '3.14')",
   "scipy; sys_platform != 'android' and sys_platform != 'ios'",
 ]
