Revert "build-ios: brew upgrade|install cmake"
This reverts commit bd3900ee794a01bb1ef91a9355ce72be619a7196.

See also:

https://github.com/pybind/pybind11/pull/5822#issuecomment-3247827317

--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -42,9 +42,7 @@ jobs:
         submodules: true
         fetch-depth: 0
 
-    - run: |
-        brew update
-        brew upgrade --formula cmake || brew install --formula cmake
+    - run: brew upgrade cmake
 
     - uses: pypa/cibuildwheel@v3.1
       env:
