Fix iOS build step for cmake installation
Replaced brew upgrade with brew install for cmake.

--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -30,7 +30,6 @@ jobs:
         only: cp312-pyodide_wasm32
 
   build-ios:
-    if: github.event_name == 'THIS NEEDS FIXING' # trick to disable the job
     name: iOS wheel ${{ matrix.runs-on }}
     runs-on: ${{ matrix.runs-on }}
     strategy:
@@ -43,7 +42,7 @@ jobs:
         submodules: true
         fetch-depth: 0
 
-    - run: brew upgrade cmake # this was the FAILING step
+    - run: brew install cmake
 
     - uses: pypa/cibuildwheel@v3.1
       env:
