--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -42,7 +42,7 @@ jobs:
         submodules: true
         fetch-depth: 0
 
-    # We have ot uninstall first because GH is now using a local tap to build cmake<4, iOS needs cmake>=4
+    # We have to uninstall first because GH is now using a local tap to build cmake<4, iOS needs cmake>=4
     - run: brew uninstall cmake && brew install cmake
 
     - uses: pypa/cibuildwheel@v3.1
