Pass "-DPYBIND11_DISABLE_SUPPORTS_TYPE_HINTS" via -DCMAKE_CXX_FLAGS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,7 +214,7 @@ jobs:
         -DDOWNLOAD_CATCH=ON
         -DDOWNLOAD_EIGEN=ON
         -DCMAKE_CXX_STANDARD=14
-        -DPYBIND11_DISABLE_SUPPORTS_TYPE_HINTS=1
+        -DCMAKE_CXX_FLAGS="-DPYBIND11_DISABLE_SUPPORTS_TYPE_HINTS"
         -DPYBIND11_INTERNALS_VERSION=10000000
 
     # Checks to makes sure defining `_` is allowed
