Run Android cibuildwheel job on ubuntu-22.04 runner

--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -14,8 +14,8 @@ concurrency:
 
 jobs:
   build-android:
-    name: Android wheel ubuntu-latest
-    runs-on: ubuntu-latest
+    name: Android wheel ubuntu-22.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v5
       with:
