Build Android cibuildwheel wheels without running emulator tests

--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -34,5 +34,6 @@ jobs:
     - uses: pypa/cibuildwheel@v3.3
       env:
         CIBW_PLATFORM: android
+        CIBW_TEST_COMMAND: ""  # Temporarily disable Android tests; emulator setup is broken.
       with:
         package-dir: tests
