--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [macos-14, macos-13]
+        runs-on: [macos-14, macos-15-intel]
     steps:
     - uses: actions/checkout@v6
       with:
@@ -58,7 +58,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [macos-latest, macos-13, ubuntu-latest]
+        runs-on: [macos-latest, macos-15-intel, ubuntu-latest]
     steps:
     - uses: actions/checkout@v6
       with:
