Enforce ruff/flake8-implicit-str-concat rules (ISC)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,6 +152,7 @@ extend-select = [
   "C4",          # flake8-comprehensions
   "EM",          # flake8-errmsg
   "ICN",         # flake8-import-conventions
+  "ISC",         # flake8-implicit-str-concat
   "PGH",         # pygrep-hooks
   "PIE",         # flake8-pie
   "PL",          # pylint
